feature/TPIN-032: updated code and the docs
